--- a/style.css
+++ b/style.css
@@ -1,27 +1,28 @@
-html{
+html {
     box-sizing: border-box;
     height: 100%;
-}
-
-*,
-*::before,
-*::after{
+  }
+  
+  *,
+  *::before,
+  *::after {
     box-sizing: inherit;
     margin: 0;
-    padding: 0;  
-}
-
-body{
+    padding: 0;
+  }
+  
+  body {
     align-items: center;
-    background: linear-gradient(320deg, #eb92be, #ffef78, #63c9b4);
     display: flex;
-    font-family: 'Open Sans', sans-serif;
-    font-display: swap;
-    height: inherit;
+    font-family: 'Nova Flat';
+    height: 100vh;
     justify-content: center;
-}
-
-.wrapper{
+    background-image: url("image.jpg");
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .wrapper {
     backdrop-filter: blur(5.5px);
     -webkit-backdrop-filter: blur(5.5px);
     border-radius: 16px;
@@ -31,12 +32,12 @@ body{
     -webkit-backdrop-filter: blur(4px);
     background: rgba(255, 255, 255, 0.30);
     border: 1px solid rgba(255, 255, 255, 0.34);
-    flex-basis: 400px;
-    height: 540px;
+    width: 90%;
+    max-width: 400px;
     padding: 20px 35px;
-}
-
-.screen{
+  }
+  
+  .screen {
     backdrop-filter: blur(5.5px);
     -webkit-backdrop-filter: blur(5.5px);
     background: rgba(255, 255, 255, 0.75);
@@ -44,61 +45,76 @@ body{
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(35, 35, 35, 35, 0.1);
     color: #232323;
-    font-size: 35px;
+    font-size: 6vw;
     overflow: auto;
     padding: 20px;
     text-align: right;
-    width: 326px;
-}
-
-.calc-button-row{
+    width: 100%;
+  }
+  
+  .calc-button-row {
     display: flex;
     justify-content: space-between;
     margin: 5% 0;
-}
-
-.calc-button{
+  }
+  
+  .calc-button {
     backdrop-filter: blur(5.5px);
     -webkit-backdrop-filter: blur(5.5px);
-    background: rgba(255, 255, 255, 0.75);
+    background: rgba(255, 255, 255, 0.549);
     border: 1px solid rgba(255, 255, 255, 0.01);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(35, 35, 35, 35, 0.1);
     color: #232323;
     flex-basis: 20%;
     font-family: inherit;
-    font-size: 24px;
-    height: 65px;
-}
-
-.calc-button:last-child{
+    font-size: 4vw;
+    height: 10vw;
+  }
+  
+  .calc-button:last-child {
     backdrop-filter: blur(5.5px);
     -webkit-backdrop-filter: blur(5.5px);
     background: rgba(255, 255, 255, 0.75);
     border: 1px solid rgba(255, 255, 255, 0.01);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(35, 35, 35, 35, 0.1);
-    color: #fff;
-    background: #d72880;
-}
-
-.calc-button:last-child:hover{
+    color: #ffffff;
+    background: #000000a9;
+  }
+  
+  .calc-button:last-child:hover {
     background-color: inherit;
     color: inherit;
-}
-
-.calc-button:hover{
+  }
+  
+  .calc-button:hover {
     background-color: inherit;
-}
-
-.calc-button:active{
+  }
+  
+  .calc-button:active {
     background-color: #ffef78;
-}
-
-.double{
+  }
+  
+  .double {
     flex-basis: 47%;
-}
-
-.triple{
+  }
+  
+  .triple {
     flex-basis: 73%;
-}
+  }
+  
+  @media (min-width: 768px) {
+    .wrapper {
+      width: 400px;
+    }
+  
+    .screen {
+      font-size: 35px;
+    }
+  
+    .calc-button {
+      font-size: 24px;
+      height: 65px;
+    }
+  }
